# token-generator-contracts

./: Cargo.toml  README.md  build.sh
contract/: Cargo.toml
contract/src/: lib.rs  types.rs  utils.rs
contract/src/nft_fractionalizer/: mod.rs
contract/src/sales/: mod.rs
multi-token-standard-impl/examples/multi-token/: build.sh
multi-token-standard-impl/examples/multi-token/mt/src/: lib.rs
multi-token-standard-impl/examples/multi-token/tests/sim/: utils.rs
multi-token-standard-impl/multi_token/src/: macros.rs
nft/: Cargo.toml
nft/src/: lib.rs
res/: contract.wasm  nft.wasm  test.wasm
scripts/: new-contract.sh  new-core-contract.sh  new-nft-conftract.sh
sim/: main.rs
sim/testing/: internal_balance_ft.rs  internal_balance_mt.rs  internal_balance_nft.rs  test_fractionalize.rs  utils.rs  with_macros.rs
specs/: tech.md
