[package]
name = "contract"
version = "1.0.0"
authors = ["Atilla Not A Hun - Neon Tetra LLC"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-account = "0.1.2"
near-internal-balances-plugin = "0.1.0"
near-sdk = "4.0.0-pre.2"
near-contract-standards = "4.0.0-pre.2"

multi-token-standard = { path = "../multi-token-standard-impl/multi_token" }
uint = "0.9.2"
